classDiagram

    Hotel *-- Habitacion
    
    class Hotel
    Hotel: +HotelLocation
    Hotel: +Habitaciones

    Habitacion o-- RoomBooking
    Habitacion --* RoomHouseKeeping
    Habitacion o-- RoomCharge
    Habitacion --o RoomKey
    Habitacion o-- ServicioLimpieza
    Habitacion o-- Mozo

    class Habitacion
    Habitacion: +numHabitacion
    Habitacion: +tipoHabitacion
    Habitacion: +precioDeReserva
    Habitacion: +disponibilidad

    Cuenta o-- Notificacion
    Cuenta o-- Factura

    class Cuenta
    Cuenta: +Huesped
    Cuenta: +Habitaciones
    Cuenta: +tipoCuenta

    class Gerente
    Gerente: +registroCuenta()
    Gerente: +agregarEmpleado()

    Huesped --o Cuenta
    Huesped --o Sistema

    class Huesped
    Huesped: +buscar()
    Huesped: +reservar()

    AmaDeLlaves --o Habitacion
    AmaDeLlaves --* RoomHouseKeeping

    class AmaDeLlaves
    AmaDeLlaves: +agregarRegistro()

    Recepcionista --o Cuenta
    Recepcionista o-- Pago

    class Recepcionista
    Recepcionista: +agregarHabitacion()
    Recepcionista: +crearReserva()
    Recepcionista: +cancelarReserva()
    Recepcionista: +checkIn()
    Recepcionista: +checkOut()

    ServicioLimpieza --o Sistema
    ServicioLimpieza --o Cuenta
    ServicioLimpieza --* Habitacion

    class ServicioLimpieza
    ServicioLimpieza: +seguimientoRegistro()

    class RoomBooking 
    RoomBooking: +cancelarReserva()
    RoomBooking: +crearReserva()
    RoomBooking: +editarReserva()
    RoomBooking: +accederReservas()

    RoomBooking --o ReservaHistorial

    class Notificacion
    Notificacion: +Notificacion

    class RoomHouseKeeping
    RoomHouseKeeping: +registroHabitaciones()
    RoomHouseKeeping: +Habitacion 
    RoomHouseKeeping: +AmaDeLlaves

    class RoomCharge
    RoomCharge: +Comodidades
    RoomCharge: +ServicioHabitacion
    RoomCharge: +ServicioLimpieza
    RoomCharge: +Alimentos
    RoomCharge: +seguimientoRegistro()

    class Factura
    Factura: +idFactura
    Factura: +Nombre
    Factura: +Domicilio
    Factura: +Total
    Factura: +cargoHabitacion

    class RoomKey 
    RoomKey: +idLlave

    class Pago
    Pago: +efectivo
    Pago: +credito
    Pago: +cheque

    ReservaHistorial o-- Sistema

    class ReservaHistorial
    ReservaHistorial: +tipoHabitacion
    ReservaHistorial: +huespedes
    ReservaHistorial: +fechaReserva
    ReservaHistorial: +ReservasCompletadas()
    ReservaHistorial: +ReservasCanceladas()
    
    Reserva --o ReservaHistorial
    Reserva --o Sistema

    class Reserva
    Reserva: +estado
    Reserva: +fechaReserva
    Reserva: +fechaHospedaje
    Reserva: +tipoHabitacion
    Reserva: +huespedes
    Reserva: +cancelacion()


    Alimentos --* RoomCharge
    class Alimentos

    ServicioHabitacion --* RoomCharge
    class ServicioHabitacion

    Comodidades --* RoomCharge
    class Comodidades

    class Mozo
    Mozo: +agregarRegistroH

    Usuario <|-- Huesped
    Usuario <|-- AmaDeLlaves
    Usuario <|-- Mozo 
    Usuario <|-- Recepcionista
    Usuario <|-- Invitado
    Usuario <|-- Gerente
    Usuario --o Sistema

    class Usuario
    Usuario: +email
    Usuario: +nombre
    Usuario: +apellido
    Usuario: +domicilio

    Sistema --* Hotel
    Sistema --o Habitacion

    class Sistema
    Sistema: +Usuarios
    Sistema: +Habitaciones
    Sistema: +Reserva
    Sistema: +ReservaHistorial
    Sistema: +ServicioLimpieza
    Sistema: +Huespedes
    Sistema: +agregarHabitacion()
    Sistema: +buscarHabitacion()
    Sistema: +eliminarHabitacion()
    Sistema: +editarHabitacion()
    Sistema: +registrarCuenta()
    Sistema: +cancelarCuenta()
    Sistema: +reservarHabitacion()
    Sistema: +checkIn()
    Sistema: +checkOut()
    Sistema: +agregarGasto()
    Sistema: +actualizarRegistroDeLimpieza()
    Sistema: +reembolso()